Added endpoints to get the categories of reviews/lists and the interests of users
