# routes/reviewRoutes.js
@@ -10,7 +10,7 @@ const interests_db_name = INTERESTS_LIST.map(interest => interest[0])
 //GET reviews
 router.get("/reviews/", reviewController.getReviews)
 
-//Retorna somente as categorias deste fetch
+//GET only the categories of the reviews on this fetch
 router.get("/reviews/categories", reviewController.getReviewsCategories)
 
 //GET review
